# componentize-py

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  alt-build.rs  build.rs  pyo3-config.txt  pyproject.toml  stage.sh
.github/workflows/: lint.sh  lint_examples.sh  release.yaml  test.yaml  test_examples.sh
adapters/: README.md
adapters/3a6cb41c/: wasi_snapshot_preview1.reactor.wasm
adapters/40c1f9b8/: wasi_snapshot_preview1.reactor.wasm
adapters/e8766e49/: wasi_snapshot_preview1.reactor.wasm
bundled/: componentize_py_runtime.pyi  componentize_py_types.py  isyswasfa_guest.py  poll_loop.py
bundled/componentize_py_async_support/: __init__.py  futures.py  streams.py
bundled/isyswasfa_guest/: __init__.py  streams.py
examples/cli/: README.md  app.py
examples/cli-p3/: README.md  app.py
examples/http/: README.md  app.py  poll_loop.py  spin.toml
examples/http-p3/: README.md  app.py
examples/http/wit/: command-extended.wit  incoming-handler.wit  main.wit  outgoing-handler.wit  proxy.wit  test.wit  types2.wit
examples/matrix-math/: README.md  app.py  guest.py  host.py
examples/matrix-math/wit/: matrix-math.wit
examples/sandbox/: README.md  guest.py  host.py  sandbox.wit
examples/tcp/: README.md  app.py
examples/tcp-p3/: README.md  app.py
examples/tls-p3/: README.md  app.py
runtime/: Cargo.toml  build.rs  pyo3-config-clippy.txt  pyo3-config.txt
runtime/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: abi.rs  bindgen.rs  bindings.rs  command.rs  componentize.rs  convert.rs  lib.rs  link.rs  main.rs  prelink.rs  python.rs  stubwasi.rs  summary.rs  test.rs  util.rs
src/test/: echoes.rs  echoes_generated.rs  resources.rs  simple.rs  tests.rs
src/test/bar_sdk/: componentize-py.toml
src/test/bar_sdk/wit/: world.wit
src/test/foo_sdk/: componentize-py.toml
src/test/foo_sdk/wit/: world.wit
src/test/python_source/: app.py  resource_aggregates.py  resource_alias1.py  resource_borrow_export.py  resource_borrow_in_record.py  resource_floats_exports.py  resource_import_and_export.py  resource_with_lists.py  streams_and_futures.py
src/test/wit/: echoes.wit  simple-export.wit  simple-import-and-export.wit  tests.wit
test/: Cargo.toml  build.rs
test-generator/: Cargo.toml
test-generator/src/: lib.rs
test/src/: lib.rs
test/src/tests/: echoes.rs  echoes_generated.rs
test/wit/: echoes.wit  simple-export.wit  simple-import-and-export.wit
tests/: bindings.rs  componentize.rs  integration.rs
wit/: init.wit  matrix-math.wit  tls.wit
