[package]
name = "componentize-py"
version = "0.17.2"
edition = "2021"
exclude = ["cpython"]

[lib]
name = "componentize_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0.91", features = ["backtrace"] }
clap = { version = "4.5.20", features = ["derive"] }
tar = "0.4.42"
tempfile = "3.13.0"
zstd = "0.13.2"
componentize-py-shared = { path = "shared" }
wasm-encoder = "0.235.0"
wit-parser = "0.235.0"
wit-component = "0.235.0"
wasmparser = "0.235.0"
indexmap = "2.6.0"
bincode = "1.3.3"
heck = "0.5.0"
# TODO: switch back to upstream once we've updated to Python 3.14, at which
# point the following patch will no longer be needed:
pyo3 = { git = "https://github.com/dicej/pyo3", branch = "v0.25.0-no-wasm32-unwind", features = [
    "abi3-py39",
    "extension-module",
], optional = true }
wasmtime = "34.0.1"
wasmtime-wasi = "34.0.1"
once_cell = "1.20.2"
component-init-transform = "0.1"
async-trait = "0.1.83"
futures = "0.3.31"
tokio = { version = "1.41.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
] }
bytes = "1.8.0"
pretty_env_logger = "0.5.0"
cap-std = "3.3.0"
im-rc = "15.1.0"
serde = { version = "1.0.213", features = ["derive"] }
toml = "0.8.19"
semver = "1.0.23"
wasi-preview1-component-adapter-provider = "37.0.0"

[dev-dependencies]
assert_cmd = "2.0.16"
flate2 = "1.1.1"
fs_extra = "1.3.0"
hex = "0.4.3"
predicates = "3.1.2"
proptest = "1.5.0"
reqwest = { version = "0.12.15", features = [
    "blocking",
    "brotli",
    "deflate",
    "gzip",
    "zstd",
] }
tar = "0.4.42"
tempfile = "3.13.0"

[build-dependencies]
anyhow = "1.0.89"
tar = "0.4.41"
zstd = "0.13.2"
test-generator = { path = "test-generator" }

[workspace]
members = ["runtime", "shared", "test-generator"]
