[package]
name = "componentize-py"
version = "0.19.0"
edition = "2024"
exclude = ["cpython"]

[lib]
name = "componentize_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0.91", features = ["backtrace"] }
clap = { version = "4.5.20", features = ["derive"] }
tar = "0.4.42"
tempfile = "3.13.0"
zstd = "0.13.2"
# TODO: switch to wasm-tools release once https://github.com/bytecodealliance/wasm-tools/pull/2367 has been merged and released
wasm-encoder = { git = "https://github.com/dicej/wasm-tools", rev = "b072b0ca" }
wit-dylib = { git = "https://github.com/dicej/wasm-tools", rev = "b072b0ca" }
wit-parser = { git = "https://github.com/dicej/wasm-tools", rev = "b072b0ca" }
wit-component = { git = "https://github.com/dicej/wasm-tools", rev = "b072b0ca" }
wasmparser = { git = "https://github.com/dicej/wasm-tools", rev = "b072b0ca" }
indexmap = "2.6.0"
bincode = "1.3.3"
heck = "0.5.0"
pyo3 = { version = "0.26.0", features = [
    "abi3-py39",
    "extension-module",
], optional = true }
# TODO: switch to wasmtime 39.0.x when available
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "efd56f68", features = [ "component-model-async" ] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", rev = "efd56f68", features = [ "p3" ] }
once_cell = "1.20.2"
component-init-transform = { git = "https://github.com/dicej/component-init", rev = "2d965957" }
async-trait = "0.1.83"
futures = "0.3.31"
tokio = { version = "1.41.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
] }
bytes = "1.8.0"
pretty_env_logger = "0.5.0"
cap-std = "3.3.0"
im-rc = "15.1.0"
serde = { version = "1.0.213", features = ["derive"] }
toml = "0.8.19"
semver = "1.0.23"

[dev-dependencies]
assert_cmd = "2.0.16"
flate2 = "1.1.1"
fs_extra = "1.3.0"
hex = "0.4.3"
predicates = "3.1.2"
proptest = "1.5.0"
reqwest = { version = "0.12.15", default-features = false, features = [
    "blocking",
    "brotli",
    "deflate",
    "gzip",
    "zstd",
    "rustls-tls",
] }
tar = "0.4.42"
tempfile = "3.13.0"

[build-dependencies]
anyhow = "1.0.89"
reqwest = { version = "0.12.15", default-features = false, features = [
    "blocking",
    "brotli",
    "deflate",
    "gzip",
    "zstd",
    "rustls-tls",
] }
tar = "0.4.41"
zstd = "0.13.2"
test-generator = { path = "test-generator" }
flate2 = "1.1.1"

[workspace]
members = ["runtime", "test-generator"]
