[build-system]
requires = ["maturin>=0.15,<0.16"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[project]
name = "componentize-py"
version = "0.2.1"
description = "Tool to package Python applications as WebAssembly components"
readme = "README.md"
license = { file = "LICENSE" }
authors = [ { name = "Fermyon Engineering", email = "engineering@fermyon.com" } ]
maintainers = [ { name = "Fermyon Engineering", email = "engineering@fermyon.com" } ]
keywords = [ "webassembly", "wasm", "component" ]

[project.urls]
repository = "https://github.com/dicej/componentize-py"

[project.scripts]
componentize-py = "componentize_py:script"
