[package]
name = "componentize-py-runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.91"
once_cell = "1.20.2"
# TODO: switch back to upstream once we've updated to Python 3.14, at which
# point the following patch will no longer be needed:
pyo3 = { git = "https://github.com/dicej/pyo3", branch = "v0.25.0-no-wasm32-unwind", features = ["abi3-py312", "num-bigint"] }
componentize-py-shared = { path = "../shared" }
num-bigint = "0.4.6"
wit-bindgen = { version = "0.40.0", default-features = false, features = ["macros", "realloc"] }
wit-bindgen-rt = { version = "0.40.0" }
