[package]
name = "componentize-py-runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.91"
once_cell = "1.20.2"
pyo3 = { version="0.26.0", features = ["abi3-py312", "num-bigint"] }
num-bigint = "0.4.6"
wit-bindgen = { version = "0.40.0", default-features = false, features = ["macros", "realloc"] }
wit-bindgen-rt = { version = "0.40.0" }
# TODO: switch to a release when available:
wit-dylib-ffi = { git = "https://github.com/bytecodealliance/wasm-tools", rev = "b1d8ff59", default-features = false }
